@@ -1,7 +1,7 @@
-FROM openjdk:17-oracle
+FROM eclipse-temurin:17-jre-alpine
 
 WORKDIR /home/spring
 
 COPY build/libs/*.jar /home/spring/app.jar
 
-CMD ["java", "-Dspring.profiles.active=prod", "-jar", "/home/spring/app.jar"]
+CMD ["java","-Dspring.profiles.active=prod","-Xlog:gc*:file=/home/spring/log/gc.log:time,uptimemillis,tags,level:filecount=7,filesize=20m","-jar","/home/spring/app.jar"]
